--- a/components/header.hbs
+++ b/components/header.hbs
@@ -43,9 +43,11 @@
 				</svg>
 			</div>
 			<ul class="links__list">
-				{{#each media_links}}
-				<li class="list__item"><a target="_blank" href="{{link}}">{{name}}</a></li>
-				{{/each}}
+				<li class="list__item"><a target="_blank" href="{{media_links.instagram}}">instagram</a></li>
+				<li class="list__item"><a target="_blank" href="{{media_links.facebook}}">facebook</a></li>
+				<li class="list__item"><a target="_blank" href="{{media_links.vk}}">vk</a></li>
+				<li class="list__item"><a target="_blank" href="{{media_links.behance}}">behance</a></li>
+				<li class="list__item"><a target="_blank" href="{{media_links.youtube}}">youtube</a></li>
 			</ul>
 		</div>
 	</div>
