--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -4,10 +4,15 @@
 .mail-link{
 	color: $black;
 	text-decoration: none;
-	font-size: 16px;
+	font-size: 12px;
 	text-transform: uppercase;
 	letter-spacing: 6.2px;
 
+}
+
+.tel{
+	font-size: 16px;
+	letter-spacing: 4.4px;
 }
 .footer__mail{
 	flex-direction: column;
@@ -28,32 +33,35 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 }
+.address{
+	font-size: 9px;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+}
+.links{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 20px;
+	width: 300px;
+	a{
+		display: block;
+		.fillible{
+			transition: 0.2s ease-in-out;
+			fill: transparent;
+		}
 
+		&:hover{
+			.fillible{
+				fill: $primary;
+			}
+		}
+	}
+}
 .links__item{
-	width: 37px;
-	height: 32px;
-	background:transparent url('../img/sprite-socmedia.png') left top no-repeat;
-	background-size: cover;
-	margin: 0 20px;
 
-
-	&.--instagram{
-		width: 31px;
-		background-position-x: 0;
-	}
-	&.--facebook{
-		width: 16px;
-		background-position-x: -32px;
-	}
-	&.--youtube{
-		width: 33px;
-		background-position-x: -50px;
-	}
-	&.--behance{
-		width: 37px;
-		background-position-x: right;
-	}
 
 }
 
@@ -114,24 +122,16 @@
 		fill: $white;
 	}
 
-	.links__item{
-		background:transparent url('../img/sprite-socmedia-white.png') left top no-repeat;
-		background-size: cover;
-		&.--instagram{
-			width: 31px;
-			background-position-x: 0;
+	.links{
+		.stroke{
+			fill: $white;
 		}
-		&.--facebook{
-			width: 16px;
-			background-position-x: -32px;
-		}
-		&.--youtube{
-			width: 33px;
-			background-position-x: -50px;
-		}
-		&.--behance{
-			width: 37px;
-			background-position-x: right;
+
+		a:hover{
+
+			.fillible{
+				fill: $primary-dark;
+			}
 		}
 	}
 }
