--- a/assets/css/components/forms.scss
+++ b/assets/css/components/forms.scss
@@ -173,6 +173,30 @@
 	}
 }
 
+.forms__privacy{
+	font-size: 10px;
+	text-transform: uppercase;
+	margin: 50px 0;
+	line-height: 1.5;
+	letter-spacing: 3.6px;
+	a{
+		color: $black;
+		text-decoration: none;
+		position: relative;
+		font-weight: bold;
+
+		&:after{
+			content: '';
+			position: absolute;
+			height: 1px;
+			width: 100%;
+			background-color: $black;
+			bottom: -1px;
+			left: 0;
+		};
+	}
+}
+
 .--dark{
 	.forms{
 		background: $gray-darknest;
@@ -207,6 +231,14 @@
 	}
 	.block__title{
 		color: #858585;
+	}
+
+	.forms__privacy a {
+		color: $white;
+
+		&::after{
+			background-color: $white;
+		}
 	}
 }
 
