--- a/components/summary.hbs
+++ b/components/summary.hbs
@@ -1,6 +1,6 @@
 <section id="summary" class="summary">
-	<p class="summary__subtitle">Когда-то давно Микеланджело вооружился инструментами
-		<br>и создал из глыбы мрамора произведение искусства — «Давида». 
+	<p class="summary__subtitle --uppercase">Когда-то давно Микеланджело вооружился инструментами
+		<br>и создал из глыбы мрамора произведение искусства — «Давида».
 		<br>Скульптор даже пренебрег логикой и исказил пропорции человеческого тела,
 		<br>чтобы достичь большей художественной выразительности.</p>
 
@@ -10,9 +10,9 @@
 		</div>
 
 		<div class="wrapper summary__top-title --rubrica">
-			<span class="large">мы</span> как <span class="large filling-line"><i class="line"></i><span>микеланджело</span></span>, 
-			<br>но <span class="large filling-line"><i class="line"></i><span>в digital-сфере</span></span>: 
-			<br>извлекаем шедевр из бесформенной глыбы 
+			<span class="large">мы</span> как <span class="large filling-line"><i class="line"></i><span>микеланджело</span></span>,
+			<br>но <span class="large filling-line"><i class="line"></i><span>в digital-сфере</span></span>:
+			<br>извлекаем шедевр из бесформенной глыбы
 		</div>
 		<div class="wrapper summary__mid-title">
 			<p>Мы не стремимся все объяснить с точки зрения логики.</p>
@@ -23,7 +23,7 @@
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 431.3 234.78"><g id="Слой_2" data-name="Слой 2"><g id="Слой_1-2" data-name="Слой 1"><path class="cls-1" d="M55.35,156.88v73.85H0V157.91A64.73,64.73,0,0,1,6.29,129.4a72.07,72.07,0,0,1,16.86-22.54,80,80,0,0,1,53.2-20.24H276.12V72.71a12.77,12.77,0,0,0-12.77-12.77H12.88V0h249a70.72,70.72,0,0,1,28.36,5.9A79.61,79.61,0,0,1,331,45.38a65.71,65.71,0,0,1,6.29,28.36v157H275.81V144.11H68.12A12.77,12.77,0,0,0,55.35,156.88Z"/><circle class="cls-2" cx="400.14" cy="203.61" r="31.17"/></g></g></svg>
 				</div>
 				<header data-aos="fade-right" class="footer-title__header --rubrica --italic">мы знаем, как создать <span class="--undeline">продукт</span>,
-					<br><span class="--undeline">вызывающий</span> целый спектр <span class="--undeline">эмоций</span>.			
+					<br><span class="--undeline">вызывающий</span> целый спектр <span class="--undeline">эмоций</span>.
 				</header>
 				<footer data-aos="fade-right" class="footer-title__footer">Ведь эмоции важнее.</footer>
 			</div>
