--- a/assets/css/components/banner.scss
+++ b/assets/css/components/banner.scss
@@ -72,47 +72,35 @@
 		text-decoration: none;
 	}
 }
-
-.switcher{
-	position: absolute;
-	cursor: pointer;
-	left: 16px;
-	top: calc(100% - 30px);
-	transform-origin: 50% 0;
-	// animation: wobble-horizontal 10s infinite;
-	img{
-		width: 15px;
-	}
+.switch{
+	display: flex;
+	align-items: center;
 }
+.switch__text{
+	letter-spacing: 2.74px;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 8px;
+	color: #8f8f8f;
+	margin-left: 17px;
+}
+.switcher{
+	cursor: pointer;
 
-@keyframes wobble-horizontal {
-
-	2% {
-		transform: rotate(8deg);
+	#switch{
+		transform: translate(12px, -0px);
+	}
+	#dark-circle, #line-dark{
+		opacity: 0;
+	}
+	#light-circle, #line-light, #dark-circle, #line-dark, #switch{
+		transition: 0.3s ease-in-out;
+	}
+	svg {
+		width: 59px;
+		height: auto;
 	}
 
-	4% {
-		transform: rotate(-6deg);
-	}
-
-	6% {
-		transform: rotate(4deg);
-	}
-
-	8% {
-		transform: rotate(-2deg);
-	}
-
-	10% {
-		transform: rotate(1deg);
-	}
-
-	12% {
-		transform: rotate(0deg);
-	}
-	100%{
-		transform: rotate(0deg);
-	}
 }
 
 .banner__head{
@@ -158,7 +146,26 @@
 }
 
 .--dark {
+	.switcher{
+		cursor: pointer;
 
+		#switch{
+			transition: 0.3s ease-in-out;
+			transform: translate(112px, -0px);
+		}
+
+		#light-circle, #line-light{
+			opacity: 0;
+		}
+		#dark-circle, #line-dark{
+			opacity: 1;
+		}
+		svg {
+			width: 59px;
+			height: auto;
+		}
+
+	}
 	.bright-title{
 		display: none;
 	}
@@ -263,15 +270,6 @@
 		left: 130px;
 	}
 
-	.switcher{
-		top: calc(100% - 23px);
-		img{
-			width: 11px;
-		}
-	}
-
-
-
 }
 
 
@@ -314,13 +312,6 @@
 		h4{
 		    letter-spacing: 3.17px;
 			font-size: 12px;
-		}
-	}
-	.switcher{
-		left: 12px;
-		top: calc(100% - 19px);
-		img{
-			width: 9px;
 		}
 	}
 	.banner__head{
