--- a/assets/css/components/summary.scss
+++ b/assets/css/components/summary.scss
@@ -31,7 +31,7 @@
 	font-size: 13px;
 	line-height: 37.5px;
 	letter-spacing: 0.2rem;
-	margin: 120px 0px 0;
+	margin: 120px 0px;
 }
 
 
@@ -41,7 +41,7 @@
 	text-transform: uppercase;
 	letter-spacing: 10px;
 	line-height: 63.67px;
-	margin: 130px auto 260px;
+	margin: 20px auto 260px;
 	.large{
 		font-size: 64px;
 		letter-spacing: 17.5px;
