--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -16,11 +16,13 @@
 	 		<h1 class="--rubrica-title">
 				<span class="bright-title"><span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ</span>
 				<span class="dark-title"><span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>МИРОМ<br/>ПРАВЯТ<br/>ЭМОЦИИ</span>
-				<span class="switcher">
-					<img src="assets/img/switcher.png" alt="switcher">
-				</span>
 			</h1>
-	 		<h4 class="--avente-subtitle-big">А ЭМОЦИИ СОЗДАЕМ <a href="#summary" class="--primary-color">МЫ</a></h4>
+	 		<h4 class="--avente-subtitle-big">А ЭМОЦИИ СОЗДАЕМ <a href="#summary" class="--primary-color --italic">МЫ</a></h4>
+
+			<div class="switch">
+				{{>switcher}}
+				<div class="switch__text">включи эмоции</div>
+			</div>
 	 	</div>
 	 	<div class="banner__head">
 	 		<div class="canvas-bg">
