--- a/assets/css/components/header.scss
+++ b/assets/css/components/header.scss
@@ -1,5 +1,5 @@
 .header{
-	padding: 41px 0px;
+	padding: 20px 0px;
 	position: relative;
 	z-index: 4;
 }
@@ -102,6 +102,8 @@
 	font-size: 8px;
 	letter-spacing: 2.05px;
 	color: #8f8f8f;
+	text-transform: uppercase;
+	font-weight: bold;
 
 	.active{
 		color: $primary;
