--- a/assets/css/components/summary.scss
+++ b/assets/css/components/summary.scss
@@ -42,10 +42,40 @@
 	letter-spacing: 10px;
 	line-height: 63.67px;
 	margin: 20px auto 260px;
-	.large{
+	p{
+		margin: 0;
+	}
+	.ql-size-huge{
 		font-size: 64px;
 		letter-spacing: 17.5px;
 		line-height: 81.86px;
+	}
+
+	strong.ql-size-huge {
+		position: relative;
+
+		em {
+			position: relative;
+			z-index: 2;
+		}
+		&:after {
+			content: '';
+			display: block;
+			position: absolute;
+			z-index: 0;
+			height: 37px;
+			background-color: $primary;
+			top: 19px;
+			left: -10px;
+			width: 0;
+			transition: all 0.6s ease-in-out;
+
+		}
+		&.fill{
+			&:after {
+				width: calc(100% + 20px);
+			}
+		}
 	}
 
 	.filling-line{
@@ -121,19 +151,7 @@
 		}
 	}
 }
-.--undeline{
-	position: relative;
 
-	&:after{
-		content: '';
-		position: absolute;
-		height: 1px;
-		width: 100%;
-		background-color: $black;
-		left: 0;
-		bottom: 0;
-	}
-}
 
 .summary__footer-title{
 	text-transform: uppercase;
@@ -160,6 +178,24 @@
 	font-size: 33px;
 	letter-spacing: 10px;
 	line-height: 45.83px;
+
+	p{
+		margin: 0;
+	}
+
+	u{
+		position: relative;
+		text-decoration: none;
+		&:after{
+			content: '';
+			position: absolute;
+			height: 1px;
+			width: 100%;
+			background-color: $black;
+			left: 0;
+			bottom: 0;
+		}
+	}
 }
 .footer-title__footer{
 	margin-top: 79px;
@@ -167,6 +203,8 @@
 	font-size: 17px;
 	line-height: 29.17px;
 	letter-spacing: 3.33px;
+	position: relative;
+	z-index: 2;
 	// text-transform: uppercase;
 }
 .to-bottom-arrows{
@@ -203,7 +241,7 @@
 		}
 	}
 
-	.--undeline:after{
+	u:after{
 		background: $white;
 	}
 
