--- a/assets/css/components/summary.scss
+++ b/assets/css/components/summary.scss
@@ -52,6 +52,7 @@
 	}
 
 	strong.ql-size-huge {
+		display: inline-block;
 		position: relative;
 
 		em {
@@ -65,7 +66,8 @@
 			z-index: 0;
 			height: 37px;
 			background-color: $primary;
-			top: 19px;
+			top: 50%;
+			transform: translateY(-50%);
 			left: -10px;
 			width: 0;
 			transition: all 0.6s ease-in-out;
@@ -73,32 +75,6 @@
 		}
 		&.fill{
 			&:after {
-				width: calc(100% + 20px);
-			}
-		}
-	}
-
-	.filling-line{
-		position: relative;
-		display: inline-block;
-
-		span{
-			position: relative;
-			z-index: 1;
-		}
-
-		i{
-			display: block;
-			position: absolute;
-			z-index: 0;
-			height: 37px;
-			background-color: $primary;
-			top: 19px;
-			left: -10px;
-			width: 0;
-			transition: all 0.6s ease-in-out;
-
-			&.fill{
 				width: calc(100% + 20px);
 			}
 		}
@@ -216,6 +192,9 @@
 }
 
 .--dark{
+	.summary__top-title strong.ql-size-huge:after{
+		background-color: $primary-dark;
+	}
 	.summary__top-title .filling-line i{
 		background-color: $primary-dark;
 	}
@@ -264,11 +243,24 @@
 
 }
 
-@media screen and (max-width: 876px) {
+@media screen and (max-width: 768px) {
 	.--dark{
 		.summary__container{
 			background-size: auto;
 		}
+	}
+	.summary__footer-title{
+		margin-top: 150px;
+	}
+	.footer-title__container{
+		text-align: left;
+		margin-left: 70px;
+	}
+	.footer-title__logo-bg{
+		bottom: -25px;
+		top: auto;
+		left: -380px;
+
 	}
 }
 
@@ -287,24 +279,24 @@
 	}
 	.summary__top-title{
 		margin: 0;
-		font-size: 22px;
+		font-size: 20px;
 		font-style: normal;
 		line-height: 40px;
 		letter-spacing: 7px;
+
+		.ql-size-huge {
+			font-size: 36px;
+			letter-spacing: 10px;
+			line-height: 30px;
+		}
+
+		strong.ql-size-huge::after{
+			height: 20px;
+		}
 		.large{
 			font-size: 38px;
 			letter-spacing: 7.5px;
 			line-height: 45px;
-		}
-
-
-		.filling-line{
-
-
-			i{
-				height: 20px;
-				top: 13px;
-			}
 		}
 	}
 
@@ -322,13 +314,7 @@
 	}
 
 
-	.summary__footer-title{
-		margin-top: 150px;
-	}
-	.footer-title__container{
-		text-align: left;
-		margin-left: 70px;
-	}
+
 	.footer-title__header{
 		font-style: normal;
 		font-size: 22px;
