--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -24,7 +24,7 @@
 	 				<h4 class="--avente-subtitle-big">А ЭМОЦИИ СОЗДАЕМ <a href="#summary" class="--primary-color --italic">МЫ</a></h4>
 				{{/unless}}
 				{{#if is_culture}}
-					<h4 class="--avente-subtitle-big">We create <a href="#summary" class="--primary-color --italic">emotions</a></h4>
+					<h4 class="--avente-subtitle-big">WE CREATE <a href="#summary" class="--primary-color --italic">EMOTIONS</a></h4>
 				{{/if}}
 			{{/with}}
 			{{#with home}}
