--- a/components/form.hbs
+++ b/components/form.hbs
@@ -56,7 +56,7 @@
 			</div>
 			<div class="forms__privacy">
 				<p>{{{breaklines privacy}}}</p>
-				<p><a href="{{privacy_link.link}}">{{privacy_link.text}}</a>.</p>
+				<p><a target="_blank" href="{{privacy_link.link}}">{{privacy_link.text}}</a>.</p>
 			</div>
 			<div class="submit">
 				<input class="submit__btn" value="{{button_value}}" type="submit">
