--- a/assets/css/components/banner.scss
+++ b/assets/css/components/banner.scss
@@ -32,6 +32,7 @@
 	}
 }
 .banner__popup{
+	display: none;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -39,7 +40,7 @@
 	height: 100vh;
 	background: $black;
 	z-index: 4;
-	display: flex;
+	// display: flex;
 	align-items: center;
 	justify-content: center;
 }
@@ -107,6 +108,11 @@
 	position: relative;
 	perspective: 35px;
 	z-index: 2;
+}
+@media screen and (min-width: 1440px) {
+	.banner__head {
+		top: -50px;
+	}
 }
 .head-img{
 	width: 861px;
@@ -228,7 +234,9 @@
 #popup-video-mob{
 	display: none;
 }
-
+#popup-video{
+	display: none;
+}
 @media screen and (max-width: 1440px){
 
 
@@ -258,8 +266,8 @@
 			margin-bottom: 36px;
 			position: relative;
 			margin-top: 13px;
-			font-size: 102px;
-			line-height: 93.23px;
+			font-size: 90px;
+			line-height: 85px;
 		}
 		h4{
 			margin-left: 2px;
@@ -287,6 +295,23 @@
 			background-size: auto;
 		}
 	}
+.head-img {
+	    position: relative;
+	    top: -52px;
+	    left: 0;
+	    width: 400px;
+	    height: 600px;
+	}
+	.banner__title .title-item {
+		font-size: 70px;
+		line-height: 1;
+	}
+	.spacer__text{
+		letter-spacing: 4.5px;
+	}
+	.footer-title__container{
+		margin-left: 0;
+	}
 }
 
 
@@ -306,13 +331,13 @@
 		position: relative;
 	}
 	.banner__title{
-		margin: 45px 0 125px 12px;
-		font-size: 80px;
+		margin: 50px 0 125px 12px;
 		.title-item{
+			font-size: 70px;
 			margin-top: 0px;
 			margin-bottom: 0;
 
-			line-height: 75px;
+			line-height: 65px;
 		}
 		h4{
 		  letter-spacing: 3.17px;
@@ -320,7 +345,6 @@
 		}
 	}
 	.banner__head{
-		// display: none;
 		position: absolute;
 		right: -50px;
 		top: 30px;
@@ -381,7 +405,7 @@
 	}
 	.banner__mob-text{
 		margin: 130px 0px;
-		padding: 13px;
+		width: 240px;
 		line-height: 2;
 		letter-spacing: 0.8px;
 	}
