--- a/assets/css/components/video.scss
+++ b/assets/css/components/video.scss
@@ -100,7 +100,7 @@
 .--dark{
 	.video-sect__hand{
 		.img__hand{
-			background:transparent url('../img/hand/hand-dark.png') left top no-repeat;
+			// background:transparent url('../img/hand/hand-dark.png') left top no-repeat;
 			background-size: contain;
 		}
 	}
