--- a/components/header.hbs
+++ b/components/header.hbs
@@ -66,7 +66,7 @@
 		</a></div>
 		<div data-aos="fade-down" data-aos-delay="200" class="header__spacer">
 			<a href="#forms-block" class="spacer__text">{{header_buttons.to_form}}</a>
-			<a href="#" class="spacer__text">{{header_buttons.price}}</a>
+			<a target="_blank" href="{{header_buttons.price_link}}" class="spacer__text">{{header_buttons.price}}</a>
 		</div>
 		<div data-aos="fade-down" data-aos-delay="400" class="header__links">
 			<div class="header__langswitcher">
