fix eng form subtitle

--- a/components/form.hbs
+++ b/components/form.hbs
@@ -14,7 +14,7 @@
 
 			<div class="forms__checkboxes">
 
-				<div class="checkboxes__title forms__subtitle">отметьте необходимое</div>
+				<div class="checkboxes__title forms__subtitle">{{checkboxes_subtitle}}</div>
 
 				<div class="checkboxes__blocks">
 					{{#each items}}
