--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -46,6 +46,7 @@
   <div class="banner__mob-content wrapper banner__toform-btn">
     {{#with header}}
     <div class="toform-btn__btn"><a href="#forms-block">{{header_buttons.to_form}}</a></div>
+    <div class="toform-btn__btn"><a target="_blank" href="{{header_buttons.price_link}}">{{header_buttons.price}}</a></div>
     {{/with}} {{#with banner}}
     <p class="banner__mob-text">{{{breaklines summary_top_title}}}</p>
     {{/with}}
