--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -1,7 +1,7 @@
 <section class="banner">
 
 
-  <div class="banner__popup">
+  <!-- <div class="banner__popup">
     <button class="close-btn"><img src="assets/img/close-button.svg"></button>
     <div class="popup__container">
       <video id="popup-video" preload="auto" autoplay="true" muted="muted" playsInline>
@@ -9,7 +9,7 @@
       </video>
       <video id="popup-video-mob" src="../assets/img/popup-mob.mp4" autoplay="true" muted="muted" playsInline></video>
     </div>
-  </div>
+  </div> -->
   <div class="banner__grid">
 		  {{>header}}
 		<div class="banner__wrapper wrapper">
